Fixes #1. Added background image.

--- a/MAMEIronXP.csproj
+++ b/MAMEIronXP.csproj
@@ -8,6 +8,9 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
   <ItemGroup>
+    <AvaloniaResource Include="Assets\**"/>
+   </ItemGroup>
+  <ItemGroup>
     <None Remove=".gitignore" />
     <None Remove="Assets\MAMEIronXPCabinet.afphoto" />
   </ItemGroup>
@@ -19,6 +22,12 @@
     <TrimmableAssembly Include="Avalonia.Themes.Default" />
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Include="Assets\**" />
+   </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Remove="Assets\MAMEIronXPCabinet.afphoto" />
+  </ItemGroup>
+   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.6" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.6" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
