--- a/App.config
+++ b/App.config
@@ -9,8 +9,6 @@
     <!-- For Linux the MAMEExecutable format should be something like this: "mame" -->
     <add key="MAMEExecutable" value="mame.exe"/>
     
-    <add key="MAME_Args" value="-autosave -skip_gameinfo -video d3d"/>
-
     <!-- For Windows the LogFile format should be something like this: "C:\Temp\logfile.log" -->
     <!-- For Linux the LogFile format should be something like this: "/var/log/MAMElogfile.log" -->
     <add key="LogFile" value="C:\Temp\logfile.log"/>
@@ -22,5 +20,12 @@
     <!-- For Windows the SnapDirectory format should be something like this: "C:\MAME\snap" -->
     <!-- For Linux the SnapDirectory format should be something like this: "/home/myuser/MAME/snap" -->
     <add key="SnapDirectory" value="C:\MAME\snap"/>
+
+    <!-- For Windows the RomsDirectory format should be something like this: "C:\MAME\roms" -->
+    <!-- For Linux the RomsDirectory format should be something like this: "/home/myuser/MAME/roms" -->
+    <add key="RomsDirectory" value="C:\MAME\roms"/>
+
+    <add key="MAME_Args" value="-autosave -skip_gameinfo -video d3d"/>
+
   </appSettings>
 </configuration>
