Set the default location for log files to the same directory where mame is installed. (Prevents permission issues)

--- a/App.config
+++ b/App.config
@@ -9,9 +9,9 @@
     <!-- For Linux the MAMEExecutable format should be something like this: "mame" -->
     <add key="MAMEExecutable" value="mame.exe"/>
     
-    <!-- For Windows the LogFile format should be something like this: "C:\Temp\logfile.log" -->
-    <!-- For Linux the LogFile format should be something like this: "/var/log/MAMElogfile.log" -->
-    <add key="LogFile" value="C:\Temp\logfile.log"/>
+    <!-- For Windows the LogFile format should be something like this: "C:\MAME\logfile.log" -->
+    <!-- For Linux the LogFile format should be something like this: "/home/myuser/MAME/MAMElogfile.log" -->
+    <add key="LogFile" value="C:\MAME\logfile.log"/>
 
     <!-- For Windows the catverFile format should be something like this: "C:\MAME\catver.ini" -->
     <!-- For Linux the catverFile format should be something like this: "/home/myuser/MAME/catver.ini" -->
