--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,9 @@ csharp_style_expression_bodied_local_functions = false:silent
 csharp_style_throw_expression = true:suggestion
 csharp_style_prefer_null_check_over_type_check = true:suggestion
 
+# CS8604: Possible null reference argument.
+dotnet_diagnostic.CS8604.severity = none
+
 [*.{cs,vb}]
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 tab_width = 4
