Use BGFX video parameter for MAME

--- a/App.config
+++ b/App.config
@@ -25,7 +25,7 @@
     <!-- For Linux the RomsDirectory format should be something like this: "/home/myuser/MAME/roms" -->
     <add key="RomsDirectory" value="C:\MAME\roms"/>
 
-    <add key="MAME_Args" value="-autosave -skip_gameinfo -video d3d"/>
+    <add key="MAME_Args" value="-autosave -skip_gameinfo -video bgfx"/>
 
   </appSettings>
 </configuration>
